fixes guide menu dropdown spacing

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -381,12 +381,12 @@ body:not(.donejs) {
 			}
 			> ol{
 				padding:0;
-				text-indent: 15px;
 				&:not(.linenums) {
 					margin:5px 0 0 0 !important;
 				}
 				> li > a {
 					font-size: 16px;
+					padding: 0 50px 0 15px;
 				}
 				> ol {
 					> li {
